# code-rust-lambda-test1

./: README.md
rust-lambda-test1/: Cargo.toml  my-payload.json
rust-lambda-test1/src/: main.rs
