[package]
name = "rust-lambda-test1"
version = "0.1.0"
edition = "2021"

[package.metadata.lambda.env]
RUST_LOG = "debug"
#S3_DEAD_LETTER_QUEUE_BUCKET_NAME = "TestBucket1"

[dependencies]
aws-config         = "1.1.5"
aws-sdk-s3         = "1.15.0"
aws_lambda_events  = { version = "0.13.1", default-features = false, features = ["sqs"] }
lambda_runtime     = "0.9.1"
serde              = {version = "1.0.193", features = ["derive"] }
serde_json         = "1.0.85"
tokio              = { version = "1", features = ["macros"] }
tracing            = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }